--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>first github repo</title>
 </head>
 <body>
-    
+    <h1>Git Hub</h1>
+    <p>the are 6 command in the github repository</p>
+    <ul>
+        <li>git init</li>
+        <li>git add .</li>
+        <li>git commit -m"first commit"</li>
+        <li>git branch -M main</li>
+    </ul>
 </body>
 </html>
